--- a/static/index.html
+++ b/static/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Forum</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>My Forum</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
+
   <header>
     <h1>My Forum</h1>
     <nav>
@@ -19,59 +18,80 @@
     </nav>
   </header>
 
-  <main>
-    <!-- Register Section -->
-    <section id="registerSection" class="hidden">
-      <h2>Register</h2>
-      <form id="registerForm">
-        <input id="nickname" placeholder="Nickname" required />
-        <input id="firstName" placeholder="First Name" required />
-        <input id="lastName" placeholder="Last Name" required />
-        <input id="email" placeholder="Email" type="email" required />
-        <input id="password" placeholder="Password" type="password" required />
-        <input id="age" placeholder="Age" type="number" required />
-        <select id="gender" required>
-          <option value="">Select Gender</option>
-          <option value="male">Male</option>
-          <option value="female">Female</option>
-        </select>
-        <button type="submit">Register</button>
-      </form>
-    </section>
+  <main class="flex-container">
+    <!-- Users Section - Now displayed on the left -->
+    <div id="userList">
+      <h2>Users</h2>
+      <!-- Sample user items (you can dynamically add these via JS) -->
+      <div class="user"><span>User 1</span><span class="status online"></span></div>
+      <div class="user"><span>User 2</span><span class="status"></span></div>
+      <div class="user active"><span>User 3</span><span class="status online"></span></div>
+    </div>
 
-    <!-- Login Section -->
-    <section id="loginSection" class="hidden">
-      <h2>Login</h2>
-      <form id="loginForm">
-        <input id="identifier" placeholder="Email or Nickname" required />
-        <input id="loginPassword" placeholder="Password" type="password" required />
-        <button type="submit">Login</button>
-      </form>
-    </section>
-
-    <!-- Posts Section -->
-    <section id="postsSection">
-      <h2>Posts</h2>
-      <div id="postsContainer">
-        <form id="createPostForm">
-          <input name="title" placeholder="Post Title" required />
-          <textarea name="content" placeholder="Write your post here..." required></textarea>
-          <select name="category">
-            <option value="General">General</option>
-            <option value="Questions">Questions</option>
-            <option value="News">News</option>
-          </select>
-          <button type="submit">Post</button>
-        </form>
-
-        <!-- Posts List -->
-        <div id="postsList"></div>
+    <!-- Right Side: Chat + Forum Sections -->
+    <div class="main-content">
+      <div id="chatWindow" hidden>
+        <div id="chatHeader">Chat</div>
+        <div id="messages"></div>
+        <div id="inputArea" style="display:none;">
+          <input type="text" id="messageInput" placeholder="Type your message..." />
+          <button id="sendBtn" disabled>Send</button>
+        </div>
       </div>
-    </section>
+
+      <!-- Register Section -->
+      <section id="registerSection" class="hidden">
+        <h2>Register</h2>
+        <form id="registerForm">
+          <input id="nickname" placeholder="Nickname" required />
+          <input id="firstName" placeholder="First Name" required />
+          <input id="lastName" placeholder="Last Name" required />
+          <input id="email" placeholder="Email" type="email" required />
+          <input id="password" placeholder="Password" type="password" required />
+          <input id="age" placeholder="Age" type="number" required />
+          <select id="gender" required>
+            <option value="">Select Gender</option>
+            <option value="male">Male</option>
+            <option value="female">Female</option>
+          </select>
+          <button type="submit">Register</button>
+        </form>
+      </section>
+
+      <!-- Login Section -->
+      <section id="loginSection" class="hidden">
+        <h2>Login</h2>
+        <form id="loginForm">
+          <input id="identifier" placeholder="Email or Nickname" required />
+          <input id="loginPassword" placeholder="Password" type="password" required />
+          <button type="submit">Login</button>
+        </form>
+      </section>
+
+      <!-- Posts Section -->
+      <section id="postsSection">
+        <h2>Posts</h2>
+        <div id="postsContainer">
+          <form id="createPostForm">
+            <input name="title" placeholder="Post Title" required />
+            <textarea name="content" placeholder="Write your post here..." required></textarea>
+            <select name="category">
+              <option value="General">General</option>
+              <option value="Questions">Questions</option>
+              <option value="News">News</option>
+            </select>
+            <button type="submit">Post</button>
+          </form>
+
+          <!-- Posts List -->
+          <div id="postsList"></div>
+        </div>
+      </section>
+    </div>
   </main>
 
-  <!-- JavaScript files -->
+  <!-- JavaScript file -->
   <script type="module" src="app.js"></script>
-</body>
 
+</body>
 </html>
