chat-header-username

--- a/static/index.html
+++ b/static/index.html
@@ -29,7 +29,7 @@
     <div class="main-content">
       <!-- Chats Section -->
       <section id="chatWindow" class="hidden">
-        <div id="chatHeader">Chat</div>
+        <div id="chatHeader">Chat with <span id="chatWithName">...</span></div>
         <div id="chatMessages"></div>
         <div id="inputArea">
           <input type="text" id="messageInput" placeholder="Type your message..." />
