--- a/static/index.html
+++ b/static/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <title>My Forum</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -32,7 +33,7 @@
       <div id="chatWindow" class="hidden chat-box">
         <div class="chat-header">
           <strong>Chat with: <span id="chatWithName"></span></strong>
-          <button id="closeChatBtn">Close</button>
+          <i id="closeChatBtn" class="fa-solid fa-xmark" style="cursor: pointer;"></i>
         </div>
         <div id="chatMessages"></div>
         <input id="messageInput" type="text" placeholder="Type a message..." />
