--- a/static/index.html
+++ b/static/index.html
@@ -69,6 +69,8 @@
         <form id="loginForm">
           <input id="identifier" placeholder="Email or Nickname" required />
           <input id="loginPassword" placeholder="Password" type="password" required />
+          <div id="loginError" style="color: red; display: none; margin-bottom: 10px;"></div>
+
           <button type="submit">Login</button>
         </form>
       </section>
