--- a/static/index.html
+++ b/static/index.html
@@ -27,7 +27,7 @@
   </div>
   <main id="my-content" class="flex-container">
     <!-- Users Section - Now displayed on the left -->
-    <div id="userList">
+    <div id="userList" class="hidden">
       <!-- Sample user items (you can dynamically add these via JS) -->
     </div>
 
@@ -57,7 +57,7 @@
           <input id="lastName" placeholder="Last Name" required />
           <input id="email" placeholder="Email" type="email" required />
           <input id="password" placeholder="Password" type="password" required />
-          <input id="age" placeholder="Age" type="number" required />
+           <input type="date" id="dateOfBirth" required>
           <select id="gender" required>
             <option value="">Select Gender</option>
             <option value="male">Male</option>
