--- a/static/index.html
+++ b/static/index.html
@@ -44,6 +44,7 @@
         </div>
 
         <div id="chatMessages"></div>
+        <div id="typingIndicator" class="hidden"></div>
         <input id="messageInput" type="text" placeholder="Type a message..." />
         <button id="sendBtn">Send</button>
       </div>
@@ -57,7 +58,7 @@
           <input id="lastName" placeholder="Last Name" required />
           <input id="email" placeholder="Email" type="email" required />
           <input id="password" placeholder="Password" type="password" required />
-           <input type="date" id="dateOfBirth" required>
+          <input type="date" id="dateOfBirth" required>
           <select id="gender" required>
             <option value="">Select Gender</option>
             <option value="male">Male</option>
